force-app/main/default/objects/Consultation_Opportunity_Configuration__mdt/Consultation_Opportunity_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Consultation Opportunity Configuration</label>
    <pluralLabel>Consultation Opportunity Configurations</pluralLabel>
</CustomObject>