force-app/main/default/objects/Consultation_Opportunity_Configuration__mdt/fields/AHB_Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>AHB_Opportunity_Record_Type__c</fullName>
    <label>AHB Opportunity Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>