force-app/main/default/objects/Consultation_Opportunity_Configuration__mdt/fields/AHB_Product_Name_Male__c.field-meta.xml
<CustomField>
    <fullName>AHB_Product_Name_Male__c</fullName>
    <label>AHB Product Name Male</label>
    <length>255</length>
    <type>Text</type>
</CustomField>