force-app/main/default/objects/Consultation_Opportunity_Configuration__mdt/fields/Consultation_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Product_Name__c</fullName>
    <label>Consultation Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>